--- a/analytics/profiles.yml
+++ b/analytics/profiles.yml
@@ -1,6 +1,17 @@
+# dagster_dbt_university:
+#   target: dev
+#   outputs:
+#     dev:
+#       type: duckdb
+#       path: '../{{ env_var("DUCKDB_DATABASE", "data/staging/data.duckdb") }}'
+
 dagster_dbt_university:
   target: dev
   outputs:
     dev:
       type: duckdb
       path: '../{{ env_var("DUCKDB_DATABASE", "data/staging/data.duckdb") }}'
+    prod:
+      type: duckdb
+      path: '{{ env_var("DUCKDB_DATABASE", "") }}'
+
